--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -4,31 +4,14 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          {% for link in site.data.navigation.main %}
-            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
-          {% endfor %}
+          <li class="masthead__menu-item"><a href="#biography">Biography</a></li>
+          <li class="masthead__menu-item"><a href="#research-profile">Research Profile</a></li>
+          <li class="masthead__menu-item"><a href="#publications">Publications</a></li>
+          <li class="masthead__menu-item"><a href="#honor">Honor</a></li>
+          <li class="masthead__menu-item"><a href="#academic-conference">Academic Conference</a></li>
         </ul>
         <ul class="hidden-links hidden"></ul>
       </nav>
     </div>
   </div>
 </div>
-
-.masthead__menu {
-  display: flex;
-  justify-content: space-between; /* 均匀分布 */
-  align-items: center;
-  padding: 10px 20px; /* 视需要添加内边距 */
-}
-
-.masthead__menu-item {
-  flex: 1; /* 使每个菜单项平分空间 */
-  text-align: center; /* 居中对齐 */
-}
-
-.masthead__menu a {
-  text-decoration: none;
-  color: #333; /* 可根据需要设置字体颜色 */
-  font-weight: bold; /* 使字体加粗 */
-}
-
