--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,3 +50,34 @@ layout: compress
     <li class="navbar__menu-item"><a href="#academic-conference">Academic Conference</a></li>
   </ul>
 </div>
+
+<section id="biography">
+  <h2>Biography</h2>
+  <p>Dr. Sheng Ye was born in Anhui, China, in 1994...</p>
+</section>
+
+<section id="honor">
+  <h2>Honor</h2>
+  <p>List of honors...</p>
+</section>
+
+<section id="research-profile">
+  <h2>Research Profile</h2>
+  <p>Dr. Sheng Ye's research interests focus on the development and application of multi-scale modeling...</p>
+</section>
+
+<section id="new-progress">
+  <h2>New Progress</h2>
+  <p>🎉 Our paper, "Unraveling dynamic protein structures by two-dimensional infrared spectra...</p>
+</section>
+
+<section id="publications">
+  <h2>Publications</h2>
+  <p>List of publications...</p>
+</section>
+
+<section id="academic-conference">
+  <h2>Academic Conference</h2>
+  <p>Details of academic conferences...</p>
+</section>
+
