--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,10 @@ layout: compress
 <div class="navbar">
   <ul class="navbar__menu">
     <li class="navbar__menu-item"><a href="#biography">Biography</a></li>
-    <li class="navbar__menu-item"><a href="#honor">Honor</a></li>
     <li class="navbar__menu-item"><a href="#research-profile">Research Profile</a></li>
-    <li class="navbar__menu-item"><a href="#new-progress">New Progress</a></li>
     <li class="navbar__menu-item"><a href="#publications">Publications</a></li>
+    <li class="navbar__menu-item"><a href="#honor">Honor</a></li>
+    <li class="navbar__menu-item"><a href="#new-progress">New Progress</a></li>
     <li class="navbar__menu-item"><a href="#academic-conference">Academic Conference</a></li>
   </ul>
 </div>
@@ -56,19 +56,9 @@ layout: compress
   <p>Dr. Sheng Ye was born in Anhui, China, in 1994...</p>
 </section>
 
-<section id="honor">
-  <h2>Honor</h2>
-  <p>List of honors...</p>
-</section>
-
 <section id="research-profile">
   <h2>Research Profile</h2>
-  <p>Dr. Sheng Ye's research interests focus on the development and application of multi-scale modeling...</p>
-</section>
-
-<section id="new-progress">
-  <h2>New Progress</h2>
-  <p>🎉 Our paper, "Unraveling dynamic protein structures by two-dimensional infrared spectra...</p>
+  <p>Dr. Sheng Ye's research interests focus on the development...</p>
 </section>
 
 <section id="publications">
@@ -76,8 +66,17 @@ layout: compress
   <p>List of publications...</p>
 </section>
 
+<section id="honor">
+  <h2>Honor</h2>
+  <p>List of honors...</p>
+</section>
+
+<section id="new-progress">
+  <h2>New Progress</h2>
+  <p>🎉 Our paper, "Unraveling dynamic protein structures by two-dimensional infrared spectra...</p>
+</section>
+
 <section id="academic-conference">
   <h2>Academic Conference</h2>
   <p>Details of academic conferences...</p>
 </section>
-
