--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@ layout: compress
     {% include browser-upgrade.html %}
     {% include masthead.html %}
 
-    <!-- 导航栏，放置在页面顶部 -->
+    <!-- 确保只有一个导航栏 -->
     <div class="navbar">
       <ul class="navbar__menu">
         <li class="navbar__menu-item"><a href="#biography">Biography</a></li>
