--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,3 +52,11 @@ layout: compress
   
   </body>
 </html>
+
+<footer>
+  <p>Powered by GitHub Pages</p>
+  <a href="https://hits.seeyoufarm.com">
+    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fshengyess.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
+  </a>
+</footer>
+
